# resolution

./: Cargo.toml  README.md  resolution.pl
examples/: simple.txt
src/: disj.rs  kb.rs  lib.rs  main.rs  parser.rs  term.rs
src/output/: ascii.rs  latex.rs  mod.rs
