[package]
authors = ["Nathan Ringo <remexre@gmail.com>"]
description = "A solver for the resolution problems in CSCI4511W."
homepage = "https://github.com/remexre/resolution"
license = "Apache-2.0/MIT"
name = "resolution"
repository = "https://github.com/remexre/resolution"
version = "0.1.0"

[dependencies]
structopt = "0.2.13"
failure = "0.1.3"
stderrlog = "0.4.1"
log = "0.4.6"
tectonic = { version = "0.1.11", optional = true }
